Fix navigation bar interaction on mobile view

--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,8 +1,9 @@
 #Nav-Container {
   position:sticky;
   top: 30%;
-  right: 0;
+  left: 100%;
   z-index: 100;
+  transition: all 150ms ease-in-out;
 }
 
 #Nav-Alt, #Nav{
@@ -91,6 +92,11 @@
 }
 
 @media screen and (max-width: 768px) {
+  #Nav {
+    pointer-events: none;
+    opacity: 0;
+  }
+  
   #Nav-Alt, #Nav{
     right: 0.60rem;
   }
@@ -99,6 +105,21 @@
     width: 1rem;
     gap: 0.2rem;
     padding: 0;
+  }
+
+  #Nav:hover ~div{
+    opacity: 1;
+  }
+  #Nav:hover {
+    opacity: 0;
+  }
+
+  #Nav.open ~div{
+    opacity: 0;
+  }
+  #Nav.open {
+    pointer-events: all;
+    opacity: 1;
   }
 
   .nav-alt-item {
